descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2020-xx-xx  Release 7.32.2                                     ---
----------------------------------------------------------------------

* fixed help message for -F option on gdiff command - Cliff Yapp
* fixed mged -c bomb attaching to graphical displays - Sean Morrison
* fixed titlebar bug opening .g with filename spaces - Sean Morrison

----------------------------------------------------------------------
--- 2020-09-14  Release 7.32.0                                     ---
----------------------------------------------------------------------

This major release of BRL-CAD introduces significant updates to core
library infrastructure.  The update includes restructuring of nearly
all of BRL-CAD's display infrastructure in preparation for upcoming
significant GUI changes.  This release also fixes over fifty of
BRL-CAD's command-line utilities so they work properly on Windows.
This is likely the last major release of BRL-CAD on Subversion
infrastructure with BRL-CAD's imminent migration to Git.

* added basic example to remrt man page - Cliff Yapp, Sean Morrison
* added new 'nburst' version of classic burst tool - Cliff Yapp
* added 'bot set' command for low level BoT manipulation - Cliff Yapp
* report semantic strings for 'bot get' mode/orientation - Cliff Yapp
* added new manual page for the libicv library - Sumagna Das
* added -size filter to MGED search command - Cliff Yapp
* upgraded Tcl/Tk from 8.5.19 to 8.6.10 - Cliff Yapp
* bundled zlib & libpng use API prefix and library suffix - Cliff Yapp
* extensive improvements to OpenCL ray trace pipeline - Rishabh Suthar
* improved rtweight density value warnings - Sean Morrison, Cliff Yapp
* added perception-based hdtv and hdr modes for pix-bw - Sean Morrison